# 42-cub3d

./: CMakeLists.txt  CUB3D  LICENSE  Makefile  README.md  cub3D  subject.md
asset/: 0.xpm  50.xpm  EA.xpm  NO.xpm  SO.xpm  red.xpm
assets/: WE.xpm
cub3d/: Makefile
cub3d/asset/: 25.xpm  75.xpm  xpm_generator.py
cub3d/include/: error.h  keyhook.h
cub3d/lib/jal/include/: jal_char.h  jal_colour.h  jal_gnl.h  jal_memory.h
cub3d/lib/jal/src/char/: ft_isdigit.c
cub3d/lib/jal/src/conversion/: atoll_valid.c  ft_itoa.c  ft_tolower.c
cub3d/lib/jal/src/gnl/: get_next_line.c
cub3d/lib/jal/src/list/: ft_lstclear_bonus.c  ft_lstiter_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  lstdetach.c  lstget_int.c
cub3d/lib/jal/src/memory/: ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  realloc.c
cub3d/lib/jal/src/print/: ft_putchar_fd.c  ft_putnbr_fd.c  put_characters.c
cub3d/lib/jal/src/string/: a.out  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  intlen.c  strarrcount.c  strarrdup.c  strcpy.c  strjoin_free.c  strndup.c
cub3d/lib/mlx/: mlx_int_get_visual.c  mlx_rgb.c
cub3d/map/error/: 3-wrong_ext.txt
cub3d/map/valid/: map.cub
cub3d/src/bonus/: keyhook_walk_bonus.c
cub3d/src/graphic/: raycast.c
cub3d/src/input/: filename.c  format_map.c  input.c
cub3d/src/input/read/: color_helper.c  read_int.h
cub3d/src/keyhook/: keyhook.c  keyhook_rotate.c  keyhook_walk.c
cub3d/src/main/: free.c
include/: cube3d.h  error.h  fabio.h  game.h  graphic.h  input.h  keyhook.h  mapdata.h  test.h  vector.h
includes/: cub3d.h
lib/jal/: Makefile
lib/jal/include/: jal_conversion.h  jal_error.h  jal_list.h  jal_print.h  jal_string.h
lib/jal/src/char/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c
lib/jal/src/conversion/: atoll_valid.c  ft_atoi.c  ft_toupper.c
lib/jal/src/error/: error.c
lib/jal/src/gnl/: get_next_line_utils.c  gnl_free_buffer.c
lib/jal/src/list/: ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstdelone_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  lstdel_safely.c  lstdup.c  lstnew_int.c
lib/jal/src/memory/: free_matrix.c  free_partial_matrix.c  ft_bzero.c  ft_memmove.c  ft_memset.c
lib/jal/src/print/: ft_printf.c  ft_putendl_fd.c  ft_putstr_fd.c  put_numbers.c
lib/jal/src/string/: ft_split.c  ft_strcat.c  ft_strchr.c  ft_striteri.c  ft_strlcpy.c  ft_strlen.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  isempty.c
lib/mlx/: mlx.h  mlx_init.c
lib/mlx/test/: mlx-test
libs/get_next_line/: get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
libs/libft/: ft_bzero.c  ft_calloc.c  ft_deci_to_hexa.c  ft_deci_to_hexauppercase.c  ft_isdigit.c  ft_isempty.c  ft_isprint.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printpercent.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  libft.h
map/valid/: map.cub
old/libs/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c
old/libs/libft/: Makefile  free_split.c  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_lstadd_back.c  ft_lstdelone.c  ft_lstmap.c  ft_lstsize.c  ft_memcmp.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putptr.c  ft_putstr.c  ft_putstr_fd.c  ft_putunsigned.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strmapi.c  ft_strnstr.c  ft_substr.c  ft_tolower.c  ft_toupper.c
old/maps/: map.cub
old/sprites/: EA.xpm  NO.xpm
old/srcs/: check.c  cub3d.c  init_game.c  keyhook.c  parse_map.c  raycasting.c
raycast/: Makefile  cub3d  keyhook.c  main.c  raycasting.h  textures.c
raycast/textures/: SO.xpm
sprites/: dot.xpm
src/bonus/: keyhook_walk_bonus.c
src/graphic/: draw.c  graphic.c  raycast.c  raycast_utils.c
src/input/: check_map.c  flood_fill.c  format_map.c  input.c  input_int.h  util.c
src/input/read/: map.c  read.c  read_int.h  texture.c
src/keyhook/: keyhook.c  keyhook_rotate.c  keyhook_walk.c
src/main/: free.c  init.c  main.c  util.c
src/mapdata/: check_map.c  flood_fill.c  mapdata.c  mapdata_int.h  util.c
src/mapdata/read/: get_info.c  get_map.c  read.c  read_int.h
src/raycast/: init_ray.c  keyhook.c  keyhook_rotate.c  keyhook_utils.c  keyhook_walk.c  raycast.c  raycast_utils.c  textures.c
src/test/: test_game.c  test_input.c  test_mapdata.c
srcs/: check_2.c  cleanup_game.c  keyhook.c  raycasting
