cmake_minimum_required(VERSION 3.31)
project(cub3D C)

set(CMAKE_C_STANDARD 11)

include_directories(cub3d/lib/jal/include cub3d/include lib/mlx)

add_executable(cub3D
        cub3d/lib/jal/include/jal_char.h
        cub3d/lib/jal/include/jal_colour.h
        cub3d/lib/jal/include/jal_conversion.h
        cub3d/lib/jal/include/jal_error.h
        cub3d/lib/jal/include/jal_gnl.h
        cub3d/lib/jal/include/jal_list.h
        cub3d/lib/jal/include/jal_memory.h
        cub3d/lib/jal/include/jal_print.h
        cub3d/lib/jal/include/jal_string.h
        cub3d/lib/jal/src/char/ft_isalnum.c
        cub3d/lib/jal/src/char/ft_isalpha.c
        cub3d/lib/jal/src/char/ft_isascii.c
        cub3d/lib/jal/src/char/ft_isdigit.c
        cub3d/lib/jal/src/char/ft_isprint.c
        cub3d/lib/jal/src/conversion/atoll_valid.c
        cub3d/lib/jal/src/conversion/ft_atoi.c
        cub3d/lib/jal/src/conversion/ft_itoa.c
        cub3d/lib/jal/src/conversion/ft_tolower.c
        cub3d/lib/jal/src/conversion/ft_toupper.c
        cub3d/lib/jal/src/error/error.c
        cub3d/lib/jal/src/gnl/get_next_line.c
        cub3d/lib/jal/src/gnl/get_next_line_utils.c
        cub3d/lib/jal/src/list/ft_lstadd_back_bonus.c
        cub3d/lib/jal/src/list/ft_lstadd_front_bonus.c
        cub3d/lib/jal/src/list/ft_lstclear_bonus.c
        cub3d/lib/jal/src/list/ft_lstdelone_bonus.c
        cub3d/lib/jal/src/list/ft_lstiter_bonus.c
        cub3d/lib/jal/src/list/ft_lstlast_bonus.c
        cub3d/lib/jal/src/list/ft_lstmap_bonus.c
        cub3d/lib/jal/src/list/ft_lstnew_bonus.c
        cub3d/lib/jal/src/list/ft_lstsize_bonus.c
        cub3d/lib/jal/src/list/lstdel_safely.c
        cub3d/lib/jal/src/list/lstdetach.c
        cub3d/lib/jal/src/list/lstdup.c
        cub3d/lib/jal/src/list/lstget_int.c
        cub3d/lib/jal/src/list/lstnew_int.c
        cub3d/lib/jal/src/memory/free_matrix.c
        cub3d/lib/jal/src/memory/free_partial_matrix.c
        cub3d/lib/jal/src/memory/ft_bzero.c
        cub3d/lib/jal/src/memory/ft_calloc.c
        cub3d/lib/jal/src/memory/ft_memchr.c
        cub3d/lib/jal/src/memory/ft_memcmp.c
        cub3d/lib/jal/src/memory/ft_memcpy.c
        cub3d/lib/jal/src/memory/ft_memmove.c
        cub3d/lib/jal/src/memory/ft_memset.c
        cub3d/lib/jal/src/memory/realloc.c
        cub3d/lib/jal/src/memory/sort_tab.c
        cub3d/lib/jal/src/print/ft_printf.c
        cub3d/lib/jal/src/print/ft_putchar_fd.c
        cub3d/lib/jal/src/print/ft_putendl_fd.c
        cub3d/lib/jal/src/print/ft_putnbr_fd.c
        cub3d/lib/jal/src/print/ft_putstr_fd.c
        cub3d/lib/jal/src/print/put_characters.c
        cub3d/lib/jal/src/print/put_numbers.c
        cub3d/lib/jal/src/string/ft_split.c
        cub3d/lib/jal/src/string/ft_strcat.c
        cub3d/lib/jal/src/string/ft_strchr.c
        cub3d/lib/jal/src/string/ft_strcmp.c
        cub3d/lib/jal/src/string/ft_strdup.c
        cub3d/lib/jal/src/string/ft_striteri.c
        cub3d/lib/jal/src/string/ft_strjoin.c
        cub3d/lib/jal/src/string/ft_strlcat.c
        cub3d/lib/jal/src/string/ft_strlcpy.c
        cub3d/lib/jal/src/string/ft_strlen.c
        cub3d/lib/jal/src/string/ft_strmapi.c
        cub3d/lib/jal/src/string/ft_strncmp.c
        cub3d/lib/jal/src/string/ft_strnstr.c
        cub3d/lib/jal/src/string/ft_strrchr.c
        cub3d/lib/jal/src/string/ft_strtrim.c
        cub3d/lib/jal/src/string/ft_substr.c
        cub3d/lib/jal/src/string/intlen.c
        cub3d/lib/jal/src/string/strarrcount.c
        cub3d/lib/jal/src/string/strarrdup.c
        cub3d/lib/jal/src/string/strcpy.c
        cub3d/lib/jal/src/string/strjoin_free.c
        cub3d/lib/jal/src/string/strndup.c
        cub3d/lib/jal/Makefile
        cub3d/src/input/filename.c
        cub3d/src/input/format_map.c
        cub3d/src/input/read/map.c
        cub3d/src/input/read/read.c
        cub3d/src/input/read/read_int.h
        cub3d/src/input/read/texture.c
        cub3d/src/input/check_map.c
        cub3d/src/input/flood_fill.c
        cub3d/src/input/input.c
        cub3d/src/main/main.c
        cub3d/include/error.h
        cub3d/include/input.h
        cub3d/Makefile
        cub3d/include/graphic.h
        cub3d/include/vector.h
        cub3d/include/game.h
        cub3d/src/main/init.c
        cub3d/src/main/free.c
        cub3d/include/keyhook.h
        cub3d/src/graphic/draw.c
        cub3d/src/graphic/raycast.c
        cub3d/src/graphic/raycast_utils.c
)

